# midday-engine

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .jscpd.json  CMakeLists.txt  CMakePresets.json  ENGINE_ARCHITECTURE_RESEARCH.md  GODOT_REFERENCE_SPEC.md  KICKOFF_PROMPT.md  LICENSE  MIDDAY_ENGINE_SPEC.md
cli/: CMakeLists.txt  envelope.cpp  envelope.h  help.cpp  help.h  json.cpp  json.h  main.cpp  parse.cpp  verb.cpp  verb.h
cli/verbs/: README.md  api.cpp  check.cpp  envelope_test.cpp  fmt.cpp  framework_test.cpp  golden_lifecycle_test.cpp  golden_test.cpp  help.cpp  journal.cpp  mv.cpp  new.cpp  registry.cpp  rhi.cpp  run.cpp  run_assert.cpp  run_assert.h  run_assert_kata.cpp  run_assert_lifecycle.cpp  run_assert_walk.h  run_boot.h  run_sim.h  run_sim_test.cpp  run_test.cpp  scene.cpp  script.cpp  selftest.cpp  shot.cpp  shot_test.cpp  spike_test.cpp  test_support.h  validate.cpp  validate_audit.cpp  validate_audit.h  version.cpp
core/: CMakeLists.txt  README.md
core/base/: CMakeLists.txt  README.md  arena.cpp  arena.h  arena_test.cpp  error.cpp  error.h  error_test.cpp  file_io.h  float_format.cpp  float_format.h  float_format_test.cpp  hex.h  hex_test.cpp  json.h  json_parse.cpp  json_test.cpp  json_write.cpp  log.cpp  log.h  log_test.cpp  name.cpp  name.h  name_test.cpp  platform.h
core/bus/: CMakeLists.txt  README.md  bus.cpp  bus.h  bus_journal_test.cpp  bus_test.cpp  entity_listener.h  test_support.h
core/ecs/: CMakeLists.txt  README.md  component.h  determinism_test.cpp  entity.h  entity_test.cpp  group.h  pool.h  pool_test.cpp  sparse_set.h  sparse_set_test.cpp  structural_queue.h  view.h  view_test.cpp  world.cpp  world.h  world_test.cpp
core/expr/: CMakeLists.txt  README.md  ast.h  codegen.cpp  codegen.h  determinism_test.cpp  diag.cpp  diag.h  env.cpp  env.h  eval.cpp  eval_test.cpp  expr.cpp  expr.h  functions.cpp  functions.h  functions_test.cpp  lexer.cpp  lexer.h  parse_test.cpp  parser.cpp  parser.h  program.h  typecheck.cpp  typecheck.h  typecheck_test.cpp  value.cpp  value.h
core/hierarchy/: CMakeLists.txt  README.md  activation.cpp  activation_test.cpp  components.h  hierarchy.h  topology.cpp  topology_test.cpp  transform_test.cpp  transforms.cpp  tree_order.cpp  tree_order_test.cpp
core/input/: CMakeLists.txt  README.md  action_state.cpp  action_state.h  action_state_test.cpp  inject.cpp  inject.h  inject_test.cpp
core/journal/: CMakeLists.txt  README.md  bundle.cpp  bundle.h  file_io.h  json_fields.h  reader.cpp  reader.h  reader_test.cpp  record.cpp  record.h  record_test.cpp  test_support.h  writer.cpp  writer.h  writer_test.cpp
core/loader/: CMakeLists.txt  README.md  asset_ref.cpp  asset_ref.h  asset_ref_parse.cpp  asset_ref_parse.h  asset_ref_test.cpp  component_materialize.cpp  component_materialize.h  component_materialize_test.cpp  component_vocab.cpp  component_vocab.h  component_vocab_test.cpp  despawn_journal_test.cpp  despawn_linger_test.cpp  entity_format.h  entity_load.cpp  entity_load_test.cpp  events_load.cpp  events_load_test.cpp  format_schema.cpp  format_schema.h  format_schema_test.cpp  format_schema_validate.cpp  gaps.h  generic_components.cpp  generic_components.h  generic_components_test.cpp  input_load.cpp  input_load_test.cpp  loader.h  machine_components.cpp  machine_ctx.h  machine_emit.cpp  machine_emit.h  machine_emit_test.cpp  machine_load.cpp  machine_load_test.cpp  machine_parts.cpp  override.cpp  (+33 more)
core/math/: CMakeLists.txt  README.md  determinism_test.cpp  ease.cpp  ease.h  ease_test.cpp  fixture.cpp  fixture.h  intersect.h  intersect_test.cpp  mat.h  mat_test.cpp  noise.cpp  noise.h  noise_test.cpp  quat.h  quat_test.cpp  rng.cpp  rng.h  rng_test.cpp  spline.cpp  spline.h  spline_test.cpp  vec.h  vec_test.cpp  xform.cpp  xform.h  xform_test.cpp
core/physics/: CMakeLists.txt  README.md  jolt_support.h  physics_contacts_test.cpp  physics_determinism_test.cpp  physics_server.cpp  physics_server.h  physics_server_test.cpp  test_support.h
core/reflect/: CMakeLists.txt  README.md  builtin_events.cpp  builtin_events.h  builtin_events_test.cpp  fatal.h  init_levels.cpp  init_levels.h  init_levels_test.cpp  payload_codec.h  payload_codec_decode.cpp  payload_codec_encode.cpp  payload_codec_strict_test.cpp  payload_codec_test.cpp  payload_codec_test_support.h  payload_codec_wire.h  registry.cpp  registry.h  registry_test.cpp  type_model.cpp  type_model.h  type_model_test.cpp
core/rhi/: CMakeLists.txt  README.md  command_state.h  compare.cpp  compare.h  compare_test.cpp  conformance_test.cpp  device.h  goldens.h  handle.h  handle_lookup.h  image.cpp  image.h  image_test.cpp  null_device.cpp  null_device.h  null_device_test.cpp  rhi.h  scenes.cpp  scenes.h  scenes_test.cpp  types.h  validate.h
core/sequence/: README.md
core/statechart/: CMakeLists.txt  README.md  cascade_test.cpp  component_hooks.h  component_hooks_test.cpp  despawn_exit_test.cpp  determinism_test.cpp  hook_order_test.cpp  hooks.cpp  instance.h  instantiate.cpp  journal_refusal_test.cpp  machine_desc.h  sequence_interrupt_test.cpp  sequence_test.cpp  sequences.cpp  statechart.cpp  statechart.h  test_support.h  transition_test.cpp  transitions.cpp  watcher_test.cpp  watchers.cpp
core/tick/: CMakeLists.txt  README.md  frame_packet.h  phase.h  phase_order_test.cpp  stepping_test.cpp  test_support.h  tick_loop.cpp  tick_loop.h  tick_loop_test.cpp
tools/: CMakeLists.txt  README.md
tools/codegen_bootstrap/: CMakeLists.txt  README.md  bindings_emit.cpp  codegen.cpp  codegen.h  codegen_test.cpp  docs_emit.cpp  dts_emit.cpp  emit_util.h  main.cpp  manifest_emit.cpp
tools/golden/: README.md
tools/kata/: README.md
ts/: CMakeLists.txt  README.md
ts/codegen/: CMakeLists.txt  README.md  bindings.ts  docs.ts  dts.ts  generator.ts  host.d.ts  json.ts  manifest.ts  model.ts  selfhost.cpp  selfhost.h  selfhost_test.cpp
ts/lib/: README.md  batch.ts  component.ts  index.ts  math.ts
ts/runtime/: CMakeLists.txt  README.md  batch_bench.cpp  batch_bench.h  batch_bench_test.cpp  batch_views.cpp  batch_views.h  batch_views_test.cpp  (+23 more)
(+177 files in other folders)
